Add the GPLv3 logo

--- a/index.html
+++ b/index.html
@@ -316,9 +316,12 @@
 
         <h2 id="where-is-the-code">Where is the code?</h2>
         <p><a href="https://github.com/Gert-dev/php-integrator-base">Right here</a>, on GitHub.</p>
+
+        <p class="center">
+            <img src="images/gplv3-127x51.png" alt="GPLv3 Logo" />
+        </p>
     </div>
 
-    <br>
     <br>
 
     <div class="bottom-bar">
