--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>PHP Integrator</title>
@@ -108,6 +109,8 @@
            100% { opacity: 1; margin-top: 50px; }
         }
     </style>
+
+    <link rel="shortcut icon" href="/images/logo.png">
 </head>
 
 <body>
