--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <title>PHP Integrator</title>
 
-    <link rel="shortcut icon" href="/images/logo.png">
+    <link rel="icon" href="/images/logo.png">
 
     <style type="text/css">
         * {
