--- a/index.html
+++ b/index.html
@@ -6,6 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="PHP code analysis and utilities for the Atom editor">
 
+    <meta property="og:title" content="PHP Integrator">
+    <meta name="description" content="PHP code analysis and utilities for the Atom editor">
+    <meta property="og:description" content="PHP code analysis and utilities for the Atom editor">
+    <link rel="canonical" href="https://php-integrator.github.io/">
+    <meta property="og:url" content="https://php-integrator.github.io/">
+    <meta property="og:site_name" content="PHP Integrator">
+    <meta property="og:image" content="https://php-integrator.github.io/images/logo.png">
+    <script type="application/ld+json">
+      {
+        "@context": "http://schema.org",
+        "@type": "WebSite",
+        "name": "PHP Integrator",
+        "headline": "PHP Integrator",
+        "image": "https://php-integrator.github.io/images/logo.png",
+        "description": "PHP code analysis and utilities for the Atom editor",
+        "logo": "https://php-integrator.github.io/images/logo.png",
+        "url": "https://php-integrator.github.io/"
+      }
+    </script>
+
     <title>PHP Integrator</title>
 
     <link rel="icon" href="images/logo.png">
