Fix link to the Atom website

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
         <p>
             PHP Integrator is an open-source project that provides code analysis and utilities for PHP projects. In
-            combination with the <a href="https://www.atom.com">Atom</a> editor it integrates a powerful development
+            combination with the <a href="https://www.atom.io">Atom</a> editor it integrates a powerful development
             environment inside your text editor.
         </p>
 
