--- a/index.html
+++ b/index.html
@@ -127,6 +127,10 @@
             background-color: #ddd;
         }
 
+        .flattr-button {
+            padding-top: 5px;
+        }
+
         @keyframes fadeIn {
            0%   { opacity: 0; margin-top: 25px; }
            100% { opacity: 1; margin-top: 50px; }
@@ -350,11 +354,16 @@
 
     <br>
 
+
     <div class="bottom-bar">
         <div class="small-text center">
             If you think this project deserves it,
             <strong><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=YKTNLZCRHMRTJ">sending me some coffee beans</a></strong>
             is most appreciated!
+
+            <span class="flattr-button">
+                <script id='fb5satk'>(function(i){var f,s=document.getElementById(i);f=document.createElement('iframe');f.src='//button.flattr.com/view/?fid=po0kw0&button=compact&url='+encodeURIComponent(document.URL);f.title='Flattr';f.height=20;f.width=110;f.style.borderWidth=0;s.parentNode.insertBefore(f,s);})('fb5satk');</script>
+            </span>
         </div>
     </div>
 </body>
