Update information regarding the PHP core

--- a/index.html
+++ b/index.html
@@ -340,8 +340,9 @@
         <h2 id="is-it-really-exclusive-to-atom">Is it really exclusive to Atom?</h2>
         <p>
             The packages and CoffeeScript parts are dependent on Atom, but the PHP side, which does the heavy lifting,
-            is not dependent on Atom at all. One can just extract out the PHP code and build a plugin or extension
-            for another editor around it (in the future it might even be extracted into a separate repository).
+            is not dependent on Atom at all. The PHP side was originally part of the base Atom package, but is
+            <a href="https://github.com/php-integrator/core">in the process</a> of being split off into a separate
+            repository for reuse.
         </p>
 
         <h2 id="where-is-the-code">Where is the code?</h2>
