Point the "Show me the source" link to the organization

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <em>PHP code analysis and utilities for the Atom editor</em>
 
             <div class="small-text">
-                <a href="https://github.com/php-integrator/atom-base">Show me the source</a>
+                <a href="https://github.com/php-integrator/">Show me the source</a>
             </div>
         </div>
 
