Properly align the bottom bar button

--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
 
         .flattr-button {
             padding-top: 5px;
+            vertical-align: middle;
         }
 
         @keyframes fadeIn {
