--- a/index.html
+++ b/index.html
@@ -356,9 +356,8 @@
 
     <br>
 
-
-    <div class="bottom-bar">
-        <div class="small-text center">
+    <div id="bottom-bar" class="bottom-bar">
+        <div id="donations" class="small-text center">
             If you think this project deserves it,
             <strong><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=YKTNLZCRHMRTJ">sending me some coffee beans</a></strong>
             is most appreciated!
