Mention that the core was split off

--- a/index.html
+++ b/index.html
@@ -341,9 +341,13 @@
         <h2 id="is-it-really-exclusive-to-atom">Is it really exclusive to Atom?</h2>
         <p>
             The packages and CoffeeScript parts are dependent on Atom, but the PHP side, which does the heavy lifting,
-            is not dependent on Atom at all. The PHP side was originally part of the base Atom package, but is
-            <a href="https://github.com/php-integrator/core">in the process</a> of being split off into a separate
-            repository for reuse.
+            is not dependent on Atom at all. The PHP side was originally part of the base Atom package, but
+            <a href="https://github.com/php-integrator/core">has been split off into a separate repository for reuse</a>.
+        </p>
+
+        <p>
+            I currently have no plans to support other editors or IDE's than Atom myself, but am certainly willing to
+            help out other developers looking to use the core in other editors or IDE's.
         </p>
 
         <h2 id="where-is-the-code">Where is the code?</h2>
