Correct mentioning of core being part of base

--- a/index.html
+++ b/index.html
@@ -327,8 +327,8 @@
         <h2 id="what-is-it-really">Wait, now I'm confused, what is it really?</h2>
         <p>
             At the moment, PHP Integrator itself is an Atom package that consists of a CoffeeScript side (that plugs into
-            Atom) and a PHP side. The PHP side is directly part of the Atom package to make the process of installing
-            it as painless as possible for Atom users.
+            Atom) and a PHP side. The PHP side is separate from the Atom package but is installed automatically to make
+            the process of installing it as painless as possible for Atom users.
         </p>
 
         <p>
