--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
         </p>
 
         <h2 id="where-is-the-code">Where is the code?</h2>
-        <p><a href="https://github.com/php-integrator/atom-base">Right here</a>, on GitHub.</p>
+        <p><a href="https://github.com/php-integrator/">Right here</a>, on GitHub.</p>
 
         <p class="center">
             <img src="images/gplv3-127x51.png" alt="GPLv3 Logo" />
