--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
             <li><em>php-sqlite and SQLite >= 3.7.11</em> &mdash; Required as back end for the indexing database.</li>
             <li><em>php-mbstring</em> &mdash; Required as source code can contain Unicode characters in strings or comments.</li>
             <li><em><a href="https://github.com/danielbrodin/atom-project-manager">atom-project-manager</a></em> &mdash; Fire up your active project and go to <em>Packages &rarr; PHP Integrator &rarr; Set Up Current Project</em> (or use the command palette).</li>
-            <li><em>Proper docblocks and type hinting</em> - See <a href="https://github.com/php-integrator/core/wiki">our wiki</a> for more information.</li>
+            <li><em>Proper docblocks and type hinting</em> - See <a href="https://gitlab.com/php-integrator/core/wikis">our wiki</a> for more information.</li>
         </ul>
 
         <h2 id="what-is-it-really">Wait, now I'm confused, what is it really?</h2>
@@ -343,7 +343,7 @@
         <p>
             The packages and CoffeeScript parts are dependent on Atom, but the PHP side, which does the heavy lifting,
             is not dependent on Atom at all. The PHP side was originally part of the base Atom package, but
-            <a href="https://github.com/php-integrator/core">has been split off into a separate repository for reuse</a>.
+            <a href="https://gitlab.com/php-integrator/core">has been split off into a separate repository for reuse</a>.
         </p>
 
         <p>
