Reword "Where is the code"

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
         </p>
 
         <h2 id="where-is-the-code">Where is the code?</h2>
-        <p><a href="https://github.com/php-integrator/">Right here</a> for the packages, on GitHub, and <a href="https://gitlab.com/php-integrator/core">right here</a>, on GitLab, for the core.</p>
+        <p><a href="https://github.com/php-integrator/">Right here on GitHub</a>, for the packages, and <a href="https://gitlab.com/php-integrator/core">right here on GitLab</a>, for the core.</p>
 
         <p class="center">
             <img src="images/gplv3-127x51.png" alt="GPLv3 Logo" />
