--- a/index.html
+++ b/index.html
@@ -347,6 +347,12 @@
             help out other developers looking to use the core in other editors or IDE's.
         </p>
 
+        <p>
+            The Language Server Protocol has gathered some interest of late. Currently the core is not a compliant
+            language server, but it already is a socket server using JSON for communication. Becoming compliant with
+            the protocol is on the roadmap.
+        </p>
+
         <h2 id="where-is-the-code">Where is the code?</h2>
         <p><a href="https://github.com/php-integrator/">Right here on GitHub</a>, for the packages, and <a href="https://gitlab.com/php-integrator/core">right here on GitLab</a>, for the core.</p>
 
