Combine blocks regarding support for other editors and LSP

--- a/index.html
+++ b/index.html
@@ -343,14 +343,9 @@
         </p>
 
         <p>
-            I currently have no plans to support other editors or IDE's than Atom myself, but am certainly willing to
-            help out other developers looking to use the core in other editors or IDE's.
-        </p>
-
-        <p>
             The Language Server Protocol has gathered some interest of late. Currently the core is not a compliant
             language server, but it already is a socket server using JSON for communication. Becoming compliant with
-            the protocol is on the roadmap.
+            the protocol is on the roadmap and would make the core much more reusable for other editors.
         </p>
 
         <h2 id="where-is-the-code">Where is the code?</h2>
