Remove now obsolete source links

--- a/index.html
+++ b/index.html
@@ -238,9 +238,9 @@
                     method parameter descriptions, return type descriptions and exceptions thrown.
                 </p>
 
-                <p class="small-text">
+                <!-- <p class="small-text">
                     <a href="https://github.com/php-integrator/atom-tooltips">View the source</a>
-                </p>
+                </p> -->
             </div>
         </div>
 
@@ -280,9 +280,9 @@
                     function or method calls, such as their expected parameters with their types and default values.
                 </p>
 
-                <p class="small-text">
+                <!-- <p class="small-text">
                     <a href="https://github.com/php-integrator/atom-call-tips">View the source</a>
-                </p>
+                </p> -->
             </div>
         </div>
 
@@ -299,9 +299,9 @@
                     all included in this process.
                 </p>
 
-                <p class="small-text">
+                <!-- <p class="small-text">
                     <a href="https://github.com/php-integrator/atom-linter">View the source</a>
-                </p>
+                </p> -->
             </div>
         </div>
 
