Add "Signature Help" next to call tips

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
             </div>
 
             <div class="right">
-                <h3 id="call-tips">Call Tips</h3>
+                <h3 id="call-tips">Call Tips / Signature Help</h3>
                 <p>
                     Call tips are much like tooltips, but differ only in that they display items directly related to
                     function or method calls, such as their expected parameters with their types and default values.
