--- a/index.html
+++ b/index.html
@@ -153,9 +153,10 @@
         </div>
 
         <p>
-            PHP Integrator is an open-source project that provides code analysis and utilities for PHP projects. In
-            combination with the <a href="https://www.atom.io">Atom</a> editor it integrates a powerful development
-            environment inside your text editor.
+            PHP Integrator is an open-source project that provides code analysis and utilities for PHP projects. It
+            consists of a set of packages for the <a href="https://www.atom.io">Atom</a> editor, backed by
+            <a href="https://gitlab.com/php-integrator/core">a socket server</a> that performs the heavy lifting,
+            integrating a powerful development environment inside your text editor.
         </p>
 
         <div class="row">
