--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
         <p class="small-text">
             <sup>*</sup> Still running PHP 5.6 or PHP 7.0? Look for the Atom packages suffixed with the text
             -legacy-php56, such as <a href="https://github.com/php-integrator/atom-base-legacy-php56">php-integrator-base-legacy-php56</a>.
-            These are now unmaintained, but may provide a stopgap until you are able to update.
+            These are unmaintained, but may provide a stopgap until you are able to update.
         </p>
 
         <h2 id="what-is-it-really">Wait, now I'm confused, what is it really?</h2>
