--- a/index.html
+++ b/index.html
@@ -317,10 +317,18 @@
             <li><em>PHP 7.1 or higher <sup>*</sup></em> &mdash; The code you're actually writing can be anything ranging from PHP 5.2 up to (and including) PHP 7.1.</li>
             <li><em>php-sqlite and SQLite >= 3.7.11</em> &mdash; Required as back end for the indexing database.</li>
             <li><em>php-mbstring</em> &mdash; Required as source code can contain Unicode characters in strings or comments.</li>
-            <li><em>php-curl</em> &mdash; Not directly used, but required for installation in Atom.</li>
             <li><em>openssl</em> &mdash; Required to fetch dependencies properly via Composer.</li>
             <li><em><a href="https://github.com/danielbrodin/atom-project-manager">atom-project-manager</a></em> &mdash; Fire up your active project and go to <em>Packages &rarr; PHP Integrator &rarr; Set Up Current Project</em> (or use the command palette).</li>
             <li><em>Proper docblocks and type hinting</em> - See <a href="https://gitlab.com/php-integrator/core/wikis">our wiki</a> for more information.</li>
+        </ul>
+
+        <p>
+            The following modules aren't directly used, but they may be required for installation in Atom via Composer or by dependencies:
+        </p>
+
+        <ul>
+            <li><em>php-curl</em></li>
+            <li><em>php-xml</em></li>
         </ul>
 
         <p class="small-text">
