Add extra note that PDO SQLite is required

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 
         <ul>
             <li><em>PHP 7.1 or higher <sup>*</sup></em> &mdash; The code you're actually writing can be anything ranging from PHP 5.2 up to (and including) PHP 7.1.</li>
-            <li><em>php-sqlite and SQLite >= 3.7.11</em> &mdash; Required as back end for the indexing database.</li>
+            <li><em>php-sqlite (the PDO variant) and SQLite >= 3.7.11</em> &mdash; Required as back end for the indexing database.</li>
             <li><em>php-mbstring</em> &mdash; Required as source code can contain Unicode characters in strings or comments.</li>
             <li><em>openssl</em> &mdash; Required to fetch dependencies properly via Composer.</li>
             <li><em><a href="https://github.com/danielbrodin/atom-project-manager">atom-project-manager</a></em> &mdash; Fire up your active project and go to <em>Packages &rarr; PHP Integrator &rarr; Set Up Current Project</em> (or use the command palette).</li>
