Remove link to navigation package as it is now included in base

--- a/index.html
+++ b/index.html
@@ -199,9 +199,9 @@
                     Navigating will immediately take you to the relevant location in your code base.
                 </p>
 
-                <p class="small-text">
+                <!-- <p class="small-text">
                     <a href="https://github.com/php-integrator/atom-navigation">View the source</a>
-                </p>
+                </p> -->
             </div>
         </div>
 
