Improve code navigation title

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             </div>
 
             <div class="right">
-                <h3 id="code-navigation">Code navigation</h3>
+                <h3 id="code-navigation">Code Navigation / Goto Definition</h3>
                 <p>
                     Code navigation allows you to effortlessly travel through your codebase by clicking the names
                     of method calls, classes, interfaces, and other structural elements.
