Enhance the "How do I make it work" instructions
Put the PHP installation first, and add a step to specify PHP binary.

--- a/index.html
+++ b/index.html
@@ -343,9 +343,10 @@
         </p>
 
         <ol>
-            <li>Install the <a href="https://atom.io/packages/php-integrator-base">base package</a> and its dependencies.</li>
             <li>Install <em>PHP 7.1 or higher</em>.</li>
             <li>In <code>php.ini</code>, enable the extensions <em>mbstring, openssl</em> and <em>sqlite (the PDO variant)</em>.</li>
+            <li>In Atom editor, install the <a href="https://atom.io/packages/php-integrator-base">base package</a> and its dependencies.</li>
+            <li>If necessary, give the path to your PHP binary in <em>Settings &rarr; Packages &rarr; php-integrator-base Settings &rarr; Core</em>.</li>
             <li>Restart Atom and allow the base package to install the core.</li>
             <li>Add your project in <em>Project Manager</em> and set it up.</li>
         </ol>
