Add Liberapay link
Not to pressure anyone into donating or anything, just thought I'd
provide this in case someone is looking for a recurring payment platform
or just has a general aversion towards PayPal.

--- a/index.html
+++ b/index.html
@@ -376,8 +376,10 @@
 
     <div id="bottom-bar" class="bottom-bar">
         <div id="donations" class="small-text center">
-            If you think this project deserves it,
-            <strong><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=YKTNLZCRHMRTJ">sending me some coffee beans</a></strong>
+            If you think this project deserves it, sending me some coffee beans via
+            <strong><a target="blank" href="https://liberapay.com/Gert-dev/donate">Liberapay</a></strong>
+            or
+            <strong><a target="blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=YKTNLZCRHMRTJ">PayPal</a></strong>
             is most appreciated!
         </div>
     </div>
