--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="PHP code analysis and utilities for the Atom editor">
+    <meta name="description" content="A server providing IDE-like features for PHP code bases to clients">
 
     <meta property="og:title" content="PHP Integrator">
-    <meta name="description" content="PHP code analysis and utilities for the Atom editor">
-    <meta property="og:description" content="PHP code analysis and utilities for the Atom editor">
+    <meta name="description" content="A server providing IDE-like features for PHP code bases to clients">
+    <meta property="og:description" content="A server providing IDE-like features for PHP code bases to clients">
     <link rel="canonical" href="https://php-integrator.github.io/">
     <meta property="og:url" content="https://php-integrator.github.io/">
     <meta property="og:site_name" content="PHP Integrator">
@@ -20,7 +20,7 @@
         "name": "PHP Integrator",
         "headline": "PHP Integrator",
         "image": "https://php-integrator.github.io/images/logo.png",
-        "description": "PHP code analysis and utilities for the Atom editor",
+        "description": "A server providing IDE-like features for PHP code bases to clients",
         "logo": "https://php-integrator.github.io/images/logo.png",
         "url": "https://php-integrator.github.io/"
       }
@@ -135,7 +135,7 @@
 </head>
 
 <body>
-    <a href="https://github.com/php-integrator/atom-base" class="github-corner" aria-label="View source on Github"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
+    <a href="https://gitlab.com/php-integrator/core" class="github-corner" aria-label="View source"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
 
     <div class="content">
         <div class="center">
@@ -145,18 +145,18 @@
         <h1 id="title" class="title center">PHP Integrator</h1>
 
         <div class="center">
-            <em>PHP code analysis and utilities for the Atom editor</em>
+            <em>A server providing IDE-like features for PHP code bases to clients</em>
 
             <div class="small-text">
-                <a href="https://github.com/php-integrator/">Show me the source</a>
+                <a href="https://gitlab.com/php-integrator/core">Show me the source</a>
             </div>
         </div>
 
         <p>
-            PHP Integrator is an open-source project that provides code analysis and utilities for PHP projects. It
-            consists of a set of packages for the <a href="https://www.atom.io">Atom</a> editor, backed by
-            <a href="https://gitlab.com/php-integrator/core">a socket server</a> that performs the heavy lifting,
-            integrating a powerful development environment inside your text editor.
+            PHP Integrator is a free and open source server that provides IDE-like features for PHP projects to clients.
+            It can be integrated into any editor and is currently integrated into the the
+            <a href="https://www.atom.io">Atom editor</a> via <a href="https://github.com/php-integrator/">a set of
+            packages</a>.
         </p>
 
         <div class="row">
@@ -354,8 +354,8 @@
         <h2 id="what-is-it-really">Wait, now I'm confused, what is it really?</h2>
         <p>
             At the moment, PHP Integrator itself consists of a set of Atom packages written in CoffeeScript, backed by
-            a socket server written in PHP. The PHP server is separate from the Atom packages, but is installed
-            automatically to make the process of installing it as painless as possible for Atom users.
+            a server written in PHP (the core). The PHP server is separate from the Atom packages and reusable, but is
+            installed automatically to make the process of installing it as painless as possible for Atom users.
         </p>
 
         <p>
@@ -368,7 +368,7 @@
         <p>
             The packages and CoffeeScript parts are dependent on Atom, but the PHP server, which does the heavy lifting,
             is not dependent on Atom at all. The PHP server was originally part of the base Atom package, but
-            <a href="https://gitlab.com/php-integrator/core">has been split off into a separate repository for reuse</a>.
+            <a href="https://gitlab.com/php-integrator/core">has since been split off into a separate repository</a>.
         </p>
 
         <h2 id="what-about-making-it-a-language-server">What about making it a language server?</h2>
