--- a/index.html
+++ b/index.html
@@ -379,7 +379,10 @@
         </p>
 
         <h2 id="where-is-the-code">Where is the code?</h2>
-        <p><a href="https://github.com/php-integrator/">Right here on GitHub</a>, for the packages, and <a href="https://gitlab.com/php-integrator/core">right here on GitLab</a>, for the core.</p>
+        <p>
+            <a href="https://gitlab.com/php-integrator/core">The core is on GitLab</a> and
+            <a href="https://github.com/php-integrator/">the Atom packages on GitHub</a>
+        </p>
 
         <p class="center">
             <img src="images/gplv3-127x51.png" alt="GPLv3 Logo" />
