Tweak "Where is the code" some more

--- a/index.html
+++ b/index.html
@@ -380,8 +380,8 @@
 
         <h2 id="where-is-the-code">Where is the code?</h2>
         <p>
-            <a href="https://gitlab.com/php-integrator/core">The core is on GitLab</a> and
-            <a href="https://github.com/php-integrator/">the Atom packages on GitHub</a>
+            The core is <a href="https://gitlab.com/php-integrator/core">on GitLab</a> and
+            the Atom packages <a href="https://github.com/php-integrator/">on GitHub</a>.
         </p>
 
         <p class="center">
