Update list of possibly required dependencies

--- a/index.html
+++ b/index.html
@@ -327,8 +327,10 @@
         </p>
 
         <ul>
-            <li><em>php-curl</em></li>
-            <li><em>php-xml</em></li>
+            <li><em>curl</em></li>
+            <li><em>xml</em></li>
+            <li><em>libxml</em></li>
+            <li><em>dom</em></li>
         </ul>
 
         <p class="small-text">
