Add tip regarding xdebug

--- a/index.html
+++ b/index.html
@@ -353,6 +353,12 @@
             <li>Add your project in <em>Project Manager</em> and set it up.</li>
         </ol>
 
+        <p>
+            It may also be worthwile to disable xdebug, if you have it enabled, as
+            <a href="https://github.com/nikic/PHP-Parser/blob/master/doc/component/Performance.markdown#xdebug" target="blank">
+            even loading it</a> can have a negative impact on performance.
+        </p>
+
         <h2 id="what-is-it-really">Wait, now I'm confused, what is it really?</h2>
         <p>
             At the moment, PHP Integrator itself consists of a set of Atom packages written in CoffeeScript, backed by
