Add noopener to anchors with target="blank"

--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
 
         <p>
             It may also be worthwile to disable xdebug, if you have it enabled, as
-            <a href="https://github.com/nikic/PHP-Parser/blob/master/doc/component/Performance.markdown#xdebug" target="blank">
+            <a href="https://github.com/nikic/PHP-Parser/blob/master/doc/component/Performance.markdown#xdebug" target="blank" rel="noopener">
             even loading it</a> can have a negative impact on performance.
         </p>
 
@@ -402,9 +402,9 @@
     <div id="bottom-bar" class="bottom-bar">
         <div id="donations" class="small-text center">
             If you think this project deserves it, sending me some coffee beans via
-            <strong><a target="blank" href="https://liberapay.com/Gert-dev/donate">Liberapay</a></strong>
+            <strong><a target="blank" rel="noopener" href="https://liberapay.com/Gert-dev/donate">Liberapay</a></strong>
             or
-            <strong><a target="blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=YKTNLZCRHMRTJ">PayPal</a></strong>
+            <strong><a target="blank" rel="noopener" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=YKTNLZCRHMRTJ">PayPal</a></strong>
             is most appreciated!
         </div>
     </div>
