--- a/index.html
+++ b/index.html
@@ -271,10 +271,11 @@
             </div>
 
             <div class="right">
-                <h3 id="call-tips">Call Tips / Signature Help</h3>
+                <h3 id="call-tips">Signature Help (Call Tips)</h3>
                 <p>
-                    Call tips are much like tooltips, but differ only in that they display items directly related to
-                    function or method calls, such as their expected parameters with their types and default values.
+                    Signature help is much like tooltips, but differs only in that it displays information directly
+                    relevant to function or method calls, such as their expected arguments with their types and default
+                    values.
                 </p>
 
                 <!-- <p class="small-text">
