--- a/index.html
+++ b/index.html
@@ -259,11 +259,11 @@
 
         <div class="row">
             <div class="left">
-                <img src="images/call-tips.png" />
+                <img src="images/signature-help.png" />
             </div>
 
             <div class="right">
-                <h3 id="call-tips">Signature Help (Call Tips)</h3>
+                <h3 id="signature-help">Signature Help (Call Tips)</h3>
                 <p>
                     Signature help is much like tooltips, but differs only in that it displays information directly
                     relevant to function or method calls, such as their expected arguments with their types and default
