--- a/index.html
+++ b/index.html
@@ -382,9 +382,8 @@
 
     <div id="bottom-bar" class="bottom-bar">
         <div id="donations" class="small-text center">
-            If you think this project deserves it, sending me some coffee beans via
-            <strong><a target="blank" rel="noopener" href="https://liberapay.com/Gert-dev/donate">Liberapay</a></strong>
-            is most appreciated!
+            <strong><a target="blank" rel="noopener" href="https://liberapay.com/Gert-dev/donate">Send me some coffee beans</a></strong>
+            to keep it (me) alive!
         </div>
     </div>
 </body>
