--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
 
     <div id="bottom-bar" class="bottom-bar">
         <div id="donations" class="small-text center">
-            <strong><a target="blank" rel="noopener" href="https://liberapay.com/Gert-dev/donate">Send me some coffee beans</a></strong>
+            <strong><a target="blank" rel="noopener" href="https://liberapay.com/Gert-dev/donate">Feed me some coffee beans</a></strong>
             to keep it (me) alive!
         </div>
     </div>
