--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="A server providing IDE-like features for PHP code bases to clients">
 
-    <meta property="og:title" content="PHP Integrator">
+    <meta property="og:title" content="Serenata">
     <meta name="description" content="A server providing IDE-like features for PHP code bases to clients">
     <meta property="og:description" content="A server providing IDE-like features for PHP code bases to clients">
     <link rel="canonical" href="https://php-integrator.github.io/">
     <meta property="og:url" content="https://php-integrator.github.io/">
-    <meta property="og:site_name" content="PHP Integrator">
+    <meta property="og:site_name" content="Serenata">
     <meta property="og:image" content="https://php-integrator.github.io/images/logo.png">
     <script type="application/ld+json">
       {
         "@context": "http://schema.org",
         "@type": "WebSite",
-        "name": "PHP Integrator",
-        "headline": "PHP Integrator",
+        "name": "Serenata",
+        "headline": "Serenata",
         "image": "https://php-integrator.github.io/images/logo.png",
         "description": "A server providing IDE-like features for PHP code bases to clients",
         "logo": "https://php-integrator.github.io/images/logo.png",
@@ -26,7 +26,7 @@
       }
     </script>
 
-    <title>PHP Integrator</title>
+    <title>Serenata</title>
 
     <link rel="icon" href="images/logo.png">
 
@@ -135,28 +135,27 @@
 </head>
 
 <body>
-    <a href="https://gitlab.com/php-integrator/core" class="github-corner" aria-label="View source"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
+    <a href="https://gitlab.com/Serenata/Serenata" class="github-corner" aria-label="View source"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
 
     <div class="content">
         <div class="center">
             <img src="images/logo.png" alt="Logo" />
         </div>
 
-        <h1 id="title" class="title center">PHP Integrator</h1>
+        <h1 id="title" class="title center">Serenata</h1>
 
         <div class="center">
             <em>A server providing IDE-like features for PHP code bases to clients</em>
 
             <div class="small-text">
-                <a href="https://gitlab.com/php-integrator/core">Show me the source</a>
+                <a href="https://gitlab.com/Serenata/Serenata">Show me the source</a>
             </div>
         </div>
 
         <p>
-            PHP Integrator is a free and open source server that provides IDE-like features for PHP projects to clients.
-            It can be integrated into any editor and is currently integrated into the the
-            <a href="https://www.atom.io">Atom editor</a> via <a href="https://github.com/php-integrator/">a set of
-            packages</a>.
+            Serenata is a free and open source server that provides code assistance for PHP. It can be integrated
+            into any editor and is already integrated into the <a href="https://www.atom.io">Atom editor</a> via
+            the <a href="https://github.com/Gert-dev/php-ide-serenata/">php-ide-serenata</a> package.
         </p>
 
         <div class="row">
@@ -212,10 +211,6 @@
                 <p>
                     As an added bonus, clicking them will take you to the related element, whenever possible.
                 </p>
-
-                <p class="small-text">
-                    <a href="https://github.com/php-integrator/atom-annotations">View the source</a>
-                </p>
             </div>
         </div>
 
@@ -250,10 +245,6 @@
                     <li>Getter and setter generation</li>
                     <li>Stubbing interface methods and abstract methods</li>
                 </ul>
-
-                <p class="small-text">
-                    <a href="https://github.com/php-integrator/atom-refactoring">View the source</a>
-                </p>
             </div>
         </div>
 
@@ -299,8 +290,8 @@
             <li><em>php-sqlite (the PDO variant) and SQLite >= 3.7.11</em> &mdash; Required as back end for the indexing database.</li>
             <li><em>php-mbstring</em> &mdash; Required as source code can contain Unicode characters in strings or comments.</li>
             <li><em>openssl</em> &mdash; Required to fetch dependencies properly via Composer.</li>
-            <li><em><a href="https://github.com/danielbrodin/atom-project-manager">atom-project-manager</a></em> &mdash; Fire up your active project and go to <em>Packages &rarr; PHP Integrator &rarr; Set Up Current Project</em> (or use the command palette).</li>
-            <li><em>Proper docblocks and type hinting</em> - See <a href="https://gitlab.com/php-integrator/core/wikis">our wiki</a> for more information.</li>
+            <li><em><a href="https://github.com/danielbrodin/atom-project-manager">atom-project-manager</a></em> &mdash; Fire up your active project and go to <em>Packages &rarr; Serenata &rarr; Set Up Current Project</em> (or use the command palette).</li>
+            <li><em>Proper docblocks and type hinting</em> - See <a href="https://gitlab.com/Serenata/Serenata/wikis">our wiki</a> for more information.</li>
         </ul>
 
         <p>
@@ -315,9 +306,8 @@
         </ul>
 
         <p class="small-text">
-            <sup>*</sup> Still running PHP 5.6 or PHP 7.0? Look for the Atom packages suffixed with the text
-            -legacy-php56, such as <a href="https://github.com/php-integrator/atom-base-legacy-php56">php-integrator-base-legacy-php56</a>.
-            These are unmaintained, but may provide a stopgap until you are able to update.
+            <sup>*</sup> Not running PHP 7.1 yet? The latest version of the Atom package provides support for running
+            through Docker, so no need to update your host PHP version!
         </p>
 
         <h2 id="how-do-i-make-it-work">How do I make it work?</h2>
@@ -328,8 +318,8 @@
         <ol>
             <li>Install <em>PHP 7.1 or higher</em>.</li>
             <li>In <code>php.ini</code>, enable the extensions <em>mbstring, openssl</em> and <em>sqlite (the PDO variant)</em>.</li>
-            <li>In Atom editor, install the <a href="https://atom.io/packages/php-integrator-base">base package</a> and its dependencies.</li>
-            <li>If necessary, give the path to your PHP binary in <em>Settings &rarr; Packages &rarr; php-integrator-base Settings &rarr; Core</em>.</li>
+            <li>In Atom editor, install the <a href="https://atom.io/packages/Gert-dev/php-ide-serenata">php-ide-serenata</a> package and its dependencies.</li>
+            <li>If necessary, give the path to your PHP binary in <em>Settings &rarr; Packages &rarr; php-ide-serenata Settings &rarr; Core</em>.</li>
             <li>Restart Atom and allow the base package to install the core.</li>
             <li>Add your project in <em>Project Manager</em> and set it up.</li>
         </ol>
@@ -342,7 +332,7 @@
 
         <h2 id="what-is-it-really">Wait, now I'm confused, what is it really?</h2>
         <p>
-            At the moment, PHP Integrator itself consists of a set of Atom packages written in CoffeeScript, backed by
+            At the moment, Serenata itself consists of a set of Atom packages written in CoffeeScript, backed by
             a server written in PHP (the core). The PHP server is separate from the Atom packages and reusable, but is
             installed automatically to make the process of installing it as painless as possible for Atom users.
         </p>
@@ -357,7 +347,7 @@
         <p>
             The packages and CoffeeScript parts are dependent on Atom, but the PHP server, which does the heavy lifting,
             is not dependent on Atom at all. The PHP server was originally part of the base Atom package, but
-            <a href="https://gitlab.com/php-integrator/core">has since been split off into a separate repository</a>.
+            <a href="https://gitlab.com/Serenata/Serenata">has since been split off into a separate repository</a>.
         </p>
 
         <h2 id="what-about-making-it-a-language-server">What about making it a language server?</h2>
@@ -369,8 +359,8 @@
 
         <h2 id="where-is-the-code">Where is the code?</h2>
         <p>
-            The core is <a href="https://gitlab.com/php-integrator/core">on GitLab</a> and
-            the Atom packages <a href="https://github.com/php-integrator/">on GitHub</a>.
+            The core is <a href="https://gitlab.com/Serenata/Serenata">on GitLab</a> and
+            the Atom package <a href="https://github.com/Gert-dev/php-ide-serenata/">on GitHub</a>.
         </p>
 
         <p class="center">
