--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="A server providing IDE-like features for PHP code bases to clients">
+    <meta name="description" content="Free and open source server providing code assistance for PHP">
 
     <meta property="og:title" content="Serenata">
-    <meta name="description" content="A server providing IDE-like features for PHP code bases to clients">
-    <meta property="og:description" content="A server providing IDE-like features for PHP code bases to clients">
+    <meta name="description" content="Free and open source server providing code assistance for PHP">
+    <meta property="og:description" content="Free and open source server providing code assistance for PHP">
     <link rel="canonical" href="https://php-integrator.github.io/">
     <meta property="og:url" content="https://php-integrator.github.io/">
     <meta property="og:site_name" content="Serenata">
@@ -20,7 +20,7 @@
         "name": "Serenata",
         "headline": "Serenata",
         "image": "https://php-integrator.github.io/images/logo.png",
-        "description": "A server providing IDE-like features for PHP code bases to clients",
+        "description": "Free and open source server providing code assistance for PHP",
         "logo": "https://php-integrator.github.io/images/logo.png",
         "url": "https://php-integrator.github.io/"
       }
@@ -145,7 +145,7 @@
         <h1 id="title" class="title center">Serenata</h1>
 
         <div class="center">
-            <em>A server providing IDE-like features for PHP code bases to clients</em>
+            <em>Free and open source server providing code assistance for PHP</em>
 
             <div class="small-text">
                 <a href="https://gitlab.com/Serenata/Serenata">Show me the source</a>
